--- a/index.html
+++ b/index.html
@@ -6,6 +6,35 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello World, I am Natik!</h1>
+    <center><img src="code image.png" alt="Coding Image" width="200px" height="200px"></center>
+    <center><h3>&#9757; Hi, I am Natik!<h3></center>
+    <center><p><b><i>Web developer in training, SDET profetional and tennis player </i></b></p></center> 
+    <hr>
+    <h2>About Me</h2>  
+    <table border="1" style="border-color: white; border-collapse: collapse; width: 1300px; height: 100px;">
+        <tbody>
+            <tr>
+                <td style= "background-color:cornflowerblue ;color: white;" ><b><center>Age:</center></b></td>
+                <td bgcolor="lightgrey">41</td>
+            </tr>
+            <tr>
+                <td style= "background-color:cornflowerblue ;color: white;"><b><center>Locaton:</center></b></td>
+                <td>Broolyn, NY</td>
+            </tr>
+            <tr>
+                <td style= "background-color:cornflowerblue ;color: white;"><b><center>Occupation:</center></b></td>
+                <td bgcolor="lightgrey">SDET</td>
+            </tr>
+        </tbody>
+    </table> 
+        <h3>Quick Facts:</h3>
+        <ul>
+            <li>&#127912;Former barista turned coder</li>
+            <li>&#127934;Tennis player</li>
+            <li>&#128218;Reading: "Learning HTML"</li>
+            <li>&#129689;Coin collector</li>
+        </ul>
+        <hr>
+   
 </body>
 </html>
