My Favorite Section

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <center><h3>&#9757; Hi, I am Natik!<h3></center>
     <center><p><b><i>Web developer in training, SDET profetional and tennis player </i></b></p></center> 
     <hr>
-    <h2>About Me</h2>  
-    <table border="1" style="border-color: white; border-collapse: collapse; width: 1300px; height: 100px;">
+    <h1>About Me</h1>  
+    <table border="1" style="border-color: white; border-collapse: collapse; width: 65%; height: 100px;">
         <tbody>
             <tr>
                 <td style= "background-color:cornflowerblue ;color: white;" ><b><center>Age:</center></b></td>
@@ -27,7 +27,7 @@
             </tr>
         </tbody>
     </table> 
-        <h3>Quick Facts:</h3>
+        <h2>Quick Facts:</h2>
         <ul>
             <li>&#127912;Former barista turned coder</li>
             <li>&#127934;Tennis player</li>
@@ -35,6 +35,28 @@
             <li>&#129689;Coin collector</li>
         </ul>
         <hr>
+        <h1>My Favorites</h2>
+            <table border="1" style="border-color: white; border-collapse: collapse; width: 65%; height: 100px;" cellpadding="10px">
+                <thead >
+                    <th style="background-color: cornflowerblue; color: white;"><b>Category</b></th>
+                    <th style="background-color: cornflowerblue; color: white;"><b>Favorites</b></th>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td style="background-color: cornflowerblue; color: white"><b>Movie &#127909;</b></td>
+                        <td bgcolor="lightgrey"><b>Spirited Away, The Matrix</td>
+                    </tr>
+                    <tr>
+                        <td style="background-color: cornflowerblue; color: white"><b>Food &#127858;</b></td>
+                        <td><b>Ramen, Tacos, Coffee</td>
+                    </tr>
+                    <tr>
+                        <td style="background-color: cornflowerblue; color: white"><b>Hobbies &#128248;</b></td>
+                        <td bgcolor="lightgrey"><b>Photography, Hiking, Coding</td>
+                    </tr>
+                </tbody>
+
+            </table>
    
 </body>
 </html>
