--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My First HTML Project</title>
 </head>
 <body>
     <center><img src="code image.png" alt="Coding Image" width="200px" height="200px"></center>
@@ -55,8 +55,21 @@
                         <td bgcolor="lightgrey"><b>Photography, Hiking, Coding</td>
                     </tr>
                 </tbody>
-
             </table>
+            <hr>
+            <h1>Say Hello!</h1>
+            <p>Contact Form</p>
+            <form action="#">
+                <label for="name">Name:</label><br>
+                <input type="text" id="name"><br><br>
+                <label for="email">Email:</label><br>
+                <input type="email" id="email"><br><br>
+                <label for="message">Message:</label><br>
+                <textarea id="message" cols="30" rows="5"></textarea><br> <br>
+                <button type="submit">Send &#9993;</button>
+            </form>
+            <hr>
+            
    
 </body>
 </html>
